# NozKash

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  README.md  bn254-crypto.ts  client.py  contract_errors.py  docker-compose.yml  example.env  generate_keys.py  generate_vectors.py  ghost-library.ts  ghost_flow.sh  ghost_library.py  ghost_library_test.py  ghost_tip_protocol_web3_privacy_wallet.py  ghost_tip_test.py  ghost_vault_abi.json  mint.ethereum.testnet.env.example  mint_server.py  package-lock.json  package.json  pyproject.toml  test-vectors.test.ts  test.ts  test_vectors.py  vectors.json
app/: .env.example  README.md  abi.json  index.html  package-lock.json  package.json  vite.config.ts
app/docs/: GITHUB_SETUP.md  HACKATHON_EQUIPO.md
app/scripts/: push-github-ssh.sh
app/src/: App.tsx  layoutOutletContext.ts  main.tsx  vite-env.d.ts
docs/: HACKATHON_EQUIPO.md
py/: README.md  client.py  contract_errors.py  ghost_tip_test.py  redeem_mock.py
sol/: .gitignore  README.md  foundry.toml
sol/script/: GhostVault.s.sol
sol/scripts/: deploy_ghost_vault.sh  forge_test_generated_vectors.sh  generate_vectors.py  ghost_library.py  pyproject.toml  requirements.txt
sol/src/: GhostVault.sol
sol/test/: GhostVault.t.sol  vectors.json
src/components/: DateRangePill.tsx
src/crypto/: parityCheck.ts
src/hooks/: useWallet.ts
src/lib/: ethereum.ts
src/mock/: data.ts
src/pages/: Dashboard.tsx  Deposit.tsx
test_vectors/001ba96c_4dbdff34/: token_0.json  token_1.json  token_1000.json  token_255.json  token_256.json  token_42.json
ts/: client.ts
(+89 files in other folders)
