[project]
name = "ghostsomething"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eth-hash[pycryptodome]>=0.7.1",
    "eth-keys>=0.7.0",
    "eth-utils>=5.3.1",
    "py-ecc>=8.0.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
]
